# pyssla-designer

./: .gitignore  README.md  pyproject.toml
config/: config.json  config_realistic.json
notebooks/: placer.ipynb  segmenter.ipynb  segmenter_reverse.ipynb  segmenter_run2.ipynb
src/pyssla_designer/: config.py  downsampling.py
